force-app/main/default/objects/Trip__c/Trip__c.object-meta.xml
<CustomObject>
    <label>Trip</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nom de Trip</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trip</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>