force-app/main/default/objects/Trip__c/fields/destination__c.field-meta.xml
<CustomField>
    <fullName>destination__c</fullName>
    <label>destination</label>
    <length>50</length>
    <type>Text</type>
</CustomField>