force-app/main/default/objects/Trip__c/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <label>endDate</label>
    <type>Date</type>
</CustomField>