force-app/main/default/objects/Trip__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start date</label>
    <type>Date</type>
</CustomField>