force-app/main/default/objects/Trip__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Terminé</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>A venir</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>