force-app/main/default/objects/Trip__c/fields/totalCost__c.field-meta.xml
<CustomField>
    <fullName>totalCost__c</fullName>
    <label>totalCost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>