force-app/main/default/objects/Trip__c/fields/tripName__c.field-meta.xml
<CustomField>
    <fullName>tripName__c</fullName>
    <label>Trip name</label>
    <type>AutoNumber</type>
</CustomField>